--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -88,7 +88,7 @@ decoration {
 }
 
 animations {
-    enabled = no
+    enabled = yes
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -99,7 +99,8 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+   # animation = workspaces, 1, 6, default
+   animation = workspaces, 1, 3, default
 }
 
 dwindle {
@@ -129,6 +130,7 @@ windowrule = workspace 2,^(Firefox)$
 windowrule = float,^(Discord)$
 windowrule = float,^(mpv)$
 windowrule = float,^(pavucontrol)$
+windowrule = float,^(keepassxc)$
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
